vlib/v/checker/tests/unknown_array_element_type_b.vv
struct Aaa {
	a []abc
}

fn main() {
	s := Aaa{}
	println(s)
}
